# Homeworkweb10.0.2

./: pyproject.toml
hw_project10/hw_project10/: settings.py
hw_project10/quotes/: models.py  urls.py  views.py
hw_project10/quotes/migrations/: 0002_alter_tag_name.py
hw_project10/users/migrations/: 0001_initial.py  0002_delete_profile.py
