[tool.poetry]
name = "homeworkweb10"
version = "0.1.0"
description = ""
authors = ["Sikan777 <sikanbog@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
pymongo = "^4.6.1"
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
